Improve Customizer Site Preview on Smaller Screens #291 - Review Fixes

--- a/scss/customizer.scss
+++ b/scss/customizer.scss
@@ -1813,20 +1813,24 @@ ul.font-options__options-list {
 .pix_customizer_setting {
 	.customize-inside-control-row {
 		width: 100% !important;
+		height: 64px;
 		margin-left: 0 !important;
 		text-indent: 0 !important;
 		position: relative;
+
 		background-size: cover;
 		background-position: 50% 50%;
-		height: 64px;
 		border-radius: 4px;
-		box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5), 0 8px 8px 0 rgba(0,0,0,0.15), 0 4px 4px 0 rgba(0,0,0,0.15), 0 2px 2px 0 rgba(0,0,0,0.15);
+		overflow: hidden;
+
+		//box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5), 0 8px 8px 0 rgba(0,0,0,0.15), 0 4px 4px 0 rgba(0,0,0,0.15), 0 2px 2px 0 rgba(0,0,0,0.15);
+		box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.15), inset 0 0 3px 0 rgba(0, 0, 0, 0.15);
 
 		&:hover {
-			box-shadow: none;
-
-			.palette {
-				opacity: 1;
+			@for $i from 1 through 7 {
+				.palette .palette__item:nth-child(#{$i}) {
+					animation: fillBars #{0.1 * $i}s forwards;
+				}
 			}
 		}
 
@@ -1847,6 +1851,8 @@ ul.font-options__options-list {
 			padding: 0 10px;
 			margin-top: 0 !important;
 			align-items: center;
+
+			box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.15), inset 0 0 3px 0 rgba(0, 0, 0, 0.15);
 		}
 
 		.label__inner {
@@ -1865,16 +1871,24 @@ ul.font-options__options-list {
 			width: 100%;
 			height: 64px;
 
-			opacity: 0;
 			border-radius: 4px;
-			box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5), 0 8px 8px 0 rgba(0,0,0,0.15), 0 4px 4px 0 rgba(0,0,0,0.15), 0 2px 2px 0 rgba(0,0,0,0.15);
+			box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.15), inset 0 0 3px 0 rgba(0, 0, 0, 0.15);
 
-			transition: all .3s ease-in-out;
+
 			overflow: hidden;
 		}
 
 		.palette__item {
 			flex: 1;
+			opacity: 0;
+			margin-left: -1px;
+			transform: translateY(100%);
+		}
+
+		@for $i from 1 through 7 {
+			.palette .palette__item:nth-child(#{$i}) {
+				animation: emptyBars #{1.6 - 0.2 * $i}s forwards;
+			}
 		}
 
 		.preview__letter {
@@ -1885,4 +1899,14 @@ ul.font-options__options-list {
 			margin-right: 5px;
 		}
 	}
+}
+
+@keyframes fillBars {
+	0% { opacity: 0; transform: translateY(100%); }
+	100% { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes emptyBars {
+	0% { opacity: 1; transform: translateY(0); }
+	100% { opacity: 0; transform: translateY(100%); }
 }
